added a sample unit and instrumentation test